Archive2/c4/607bfe999ef2b6/output
main.cpp: In function 'void Print(T ...)':
main.cpp:13:10: error: parameter packs not expanded with '...':
     T vs[] = {ty...};
          ^
main.cpp:13:10: note:         'T'
